--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
+    "axios-retry": "^4.5.0",
     "clsx": "^2.1.1",
     "next": "15.4.1",
     "react": "19.1.0",
